--- a/like.html
+++ b/like.html
@@ -26,7 +26,7 @@
             나이는 4살이고 수컷 토이푸들 입니다!<br>
             집에서 왕자님 대접을 받아서 아주 자기 멋대로에, 새침한 강아지이지만 저는 이미 콩깍지가<br>
             씌어져있어요 흑흑,, 울 호두 모 갖고 시퍼 누나가 다 사주께😭<br><br>
-            <img class="dog" src="C:\Users\hyeli\Desktop\Workplace\10주차_과제\호두.jpg">
+            <img class="dog" src="C:\Users\hyeli\Desktop\Workplace\10th_work\hodu.jpg">
         </p>
     </div>
 
