--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <br><br><h1>Hello,
         <br>I'm Hyelin
         </h1>
-        <img class="profile" src="C:\Users\hyeli\Desktop\Workplace\10th_work\character.png" alt="없는디?">
+        <img class="profile" src="C:\Users\hyeli\Desktop\Workplace\10th_work\character.jpg" alt="없는디?">
         <p><br><br><a href = "about me.html">About me</a></p>
         <p><a href = "like.html">like</a></p>
     </div>
