--- a/about me.html
+++ b/about me.html
@@ -28,7 +28,7 @@
     </div>
 
     <div id="Back">
-        <br><a href="file:///C:/Users/hyeli/Desktop/Workplace/10%EC%A3%BC%EC%B0%A8_%EA%B3%BC%EC%A0%9C/%EC%9E%90%EA%B8%B0%EC%86%8C%EA%B0%9C.html">처음으로</a>
+        <br><a href="./index.html">처음으로</a>
     </div>
 </body>
 
